--- a/#src/_content.html
+++ b/#src/_content.html
@@ -1,27 +1,26 @@
 <section class="content">
+  <div class="content__images">
+    <div class="content__img content__img_smoke-left">
+      <img src="./img/content/smoke-left.png" alt="">
+    </div>
+    <div class="content__img content__img_smoke-right">
+      <img src="./img/content/smoke-right.png" alt="">
+    </div>
+    <div class="content__img content__img_ball-one">
+      <img src="./img/content/ball-1.png" alt="">
+    </div>
+    <div class="content__img content__img_ball-two">
+      <img src="./img/content/ball-2.png" alt="">
+    </div>
+    <div class="content__img content__img_ball-three">
+      <img src="./img/content/ball-3.png" alt="">
+    </div>
+    <div class="content__img content__img_player">
+      <img src="./img/content/player.png" alt="">
+    </div>
+  </div>
   <div class="container">
     <div class="content__wrapper">
-      <div class="content__images">
-        <div class="content__img content__img_smoke-left">
-          <img src="./img/content/smoke-left.png" alt="">
-        </div>
-        <div class="content__img content__img_smoke-right">
-          <img src="./img/content/smoke-right.png" alt="">
-        </div>
-        <div class="content__img content__img_ball-one">
-          <img src="./img/content/ball-1.png" alt="">
-        </div>
-        <div class="content__img content__img_ball-two">
-          <img src="./img/content/ball-2.png" alt="">
-        </div>
-        <div class="content__img content__img_ball-three">
-          <img src="./img/content/ball-3.png" alt="">
-        </div>
-        <div class="content__img content__img_player">
-          <img src="./img/content/player.png" alt="">
-        </div>
-      </div>
-
       <div class="content__box content__box_1">
         <div class="content__text">
           <p class="content__text-line content__text-line_1">
@@ -34,9 +33,8 @@
         <div class="content__sum">
           <img src="./img/content/25byn.svg" alt="">
         </div>
-
         <div class="content__box content__box_2">
-          <a href="https://maxline.by/" class="content__btn btn btn__main get-link mob-link">
+          <a href="https://maxline.by/" class="content__btn btn btn__main get-link mob-link" target="_blank">
             ПОЛУЧИТЬ БОНУС
           </a>
           <div class="content__info">
