--- a/#src/index.html
+++ b/#src/index.html
@@ -42,6 +42,8 @@
 			@@include('_header.html')
 			@@include('_content.html')
 			@@include('_footer.html')
+
+			@@include('_modal.html')
 		</main>
 
 
